--- a/nworld/app/views/layouts/application.html.erb
+++ b/nworld/app/views/layouts/application.html.erb
@@ -1,119 +1,98 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Nworld</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Nworld</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
+  <body>
+    <!--DEVISEHEAD-->
 
+    <%-# commented line -%>
+    <% if false %>
+      <p class="navbar-text pull-right">
 
-<!--DEVISEHEAD-->
+      <% if user_signed_in? %>
+        Logged in as <strong><%= current_user.email %></strong>.
+        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+      <% end %>
+    <% end %>
+    <!--DEVISEHEAD-->
 
-<%-# commented line -%>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-<% if false %>
-<p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
+          <a class="navbar-brand" href="/products"><span><img src="http://www.thealphanetworld.com/images/logo.png" width="130" height="26"></span></a>
+        </div> <!-- navbar-header -->
 
-
-<% end %>
-<!--DEVISEHEAD-->
-
-
-
-
-
-
-
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/products"><span><img src="http://www.thealphanetworld.com/images/logo.png" width="130" height="26"></span></a>
-	
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li ><a href="/products">Home <span class="sr-only">(current)</span></a></li>
-
-       <li><a href="/users">Users List</a></li> 
-     <!--   <li class="dropdown">
-          <a href="/prod" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a> -->
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li ><a href="/products">Home <span class="sr-only">(current)</span></a></li>
+            <li><a href="/users">Users List</a></li>
+            <!--   <li class="dropdown"><a href="/prod" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a> -->
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+              <!--</li>-->
+              <!--</ul>-->
+              <!--</li>-->
           </ul>
-        </li>
-      </ul>
-	  </li>
-      </ul>
-	  
-	  <!--Search
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      endSearch-->
-	  
-      <ul class="nav navbar-nav navbar-right ">
-  
-		  <% if user_signed_in? %>
- <li><a href=""><%= current_user.email %></a></li>
-  <li><%= link_to 'Edit User Account', edit_user_registration_path, :class => '' %>  </li> 
-  <li> <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => ''  %>  <li>
-<% else %>
- <li> <%= link_to "Sign up", new_user_registration_path, :class => ''  %>  </li>
-  <li><%= link_to "Login", new_user_session_path, :class => ''  %> </li>
-<% end %>
 
+          <!--Search
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          endSearch-->
+
+          <ul class="nav navbar-nav navbar-right ">
+            <% if user_signed_in? %>
+              <li><a href=""><%= current_user.email %></a></li>
+              <li><%= link_to 'Edit User Account', edit_user_registration_path, :class => '' %>  </li>
+              <li> <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => ''  %>  <li>
+            <% else %>
+              <li> <%= link_to "Sign up", new_user_registration_path, :class => ''  %>  </li>
+              <li><%= link_to "Login", new_user_session_path, :class => ''  %> </li>
+            <% end %>
           </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+          <!--</li>-->
+          <!--</ul>-->
+        </div> <!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 
+    <!--DEVISE-->
+    <% if notice %>
+      <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
 
-
-
-
-
-
-<!--DEVISE-->
-<% if notice %>
-  <p class="alert alert-success"><%= notice %></p>
-<% end %>
-<% if alert %>
-  <p class="alert alert-danger"><%= alert %></p>
-<% end %>
-<!--DEVISE END -->
-
-<%= yield %>
-
-</body>
+    <!--DEVISE END -->
+    <%= yield %>
+  </body>
 </html>
