--- a/nworld/app/views/devise/registrations/new.html.erb
+++ b/nworld/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,69 @@
+<center>
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true %>
+  
+   <div class="field">
+    <%= f.label :User_Type %><br />
+    <%= f.text_field :usertype %><br /><br />
   </div>
-
+  
+    <div class="field">
+    <%= f.label :First_name %><br />
+    <%= f.text_field :first %><br /><br />
+  </div>
+  
+    <div class="field">
+    <%= f.label :Last_name %><br />
+    <%= f.text_field :last %><br /><br />
+  </div>
+  
+	<div class="field">
+    <%= f.label :Gender %><br />
+    <%= f.text_field :sex %><br /><br />
+  </div>
+  
+    <div class="field">
+    <%= f.label :Birthday %><br />
+    <%= f.text_field :birthday %><br /><br />
+  </div>
+  
+       <div class="field">
+    <%= f.label :Address %><br />
+    <%= f.text_field :address %><br /><br />
+  </div>
+  
+    
+  
+  
+  
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.email_field :email, autofocus: true %><br /><br />
   </div>
 
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off" %><br /><br />
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off" %><br /><br />
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" %> <br /><br />
   </div>
 <% end %>
+Already have an account? Click 
 
 <%= render "devise/shared/links" %>
+
+</center>
