--- a/nworld/app/views/admins/adminview.html.erb
+++ b/nworld/app/views/admins/adminview.html.erb
@@ -1,40 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Nworld</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-
-
-<!--DEVISEHEAD-->
-
-<%-# commented line -%>
-
-<% if false %>
-<p class="navbar-text pull-right">
-<% if user_signed_in? %>
-  Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-<% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-<% end %>
-
-
-
-<!--DEVISEHEAD-->
-
-
-
-
-
-
-
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,16 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/products"><span><img src="http://www.thealphanetworld.com/images/logo.png" width="130" height="26"></span></a>
+      <a class="navbar-brand" href="/admins"><span><img src="http://www.thealphanetworld.com/images/logo.png" width="130" height="26"></span></a>
 	
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li ><a href="/products">Home <span class="sr-only">(current)</span></a></li>
+        <li ><a href="/admins">Home <span class="sr-only">(current)</span></a></li>
 
-       <li><a href="/users">Users List</a></li> 
+    <li><a href="/users">Users List</a></li>  
      <!--   <li class="dropdown">
           <a href="/prod" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a> -->
           <ul class="dropdown-menu">
@@ -75,14 +38,14 @@
 	  
       <ul class="nav navbar-nav navbar-right ">
   
-		  <% if user_signed_in? %>
+	<!--	  <% if user_signed_in? %>
  <li><a href="/profile"><%= current_user.first %> <%= current_user.last %></a></li>
   <li><%= link_to 'Edit User Account', edit_user_registration_path, :class => '' %>  </li> 
   <li> <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => ''  %>  <li>
 <% else %>
  <li> <%= link_to "Sign up", new_user_registration_path, :class => ''  %>  </li>
   <li><%= link_to "Login", new_user_session_path, :class => ''  %> </li>
-<% end %>
+<% end %>    -->
 
           </ul>
         </li>
@@ -97,19 +60,78 @@
 
 
 
-<!--DEVISE-->
-<% if notice %>
-  <p class="alert alert-success"><%= notice %></p>
-<% end %>
-<% if alert %>
-  <p class="alert alert-danger"><%= alert %></p>
-<% end %>
-<!--DEVISE END -->
+
+
+
+
+
+
+<!--<body background="assets/bg.jpeg"> -->
+
+<center><a href="/admins/new"> <button>Add New Product</button> </a></center><br>
+<% @product.each do |product| %>
+
+<% if product.num_stock !=0  %>
+
+
+<!--CSS-->
+
+
+
+  <div class="btn-group btn-group-xs-justified-column">
+    <a href="/admins/<%=product.id%>" class="thumbnail">
+      <img src="assets/<%=product.img%>" > </a>
+	  
+	  
+	  
+	  <div class="btn-group btn-group-xs-justified-column" role="group">
+<button type="button" class="btn btn-default"><%= link_to 'Edit',"/admins/#{product.id}/edit" %> 
+<button type="button" class="btn btn-default"><%= link_to 'Sold One',"/admins/#{product.id}/sold",data: {confirm: 'Decrement a stock?'} %> 
+<button type="button" class="btn btn-default"><%= link_to 'Add Stock',"/admins/#{product.id}/add",data: {confirm: 'Add a stock?'} %> 
+<button type="button" class="btn btn-default"><%= link_to 'Delete',"/admins/#{product.id}/delete",data: {confirm: 'Are you Sure?'} %>
+<!--<button type="button" class="btn btn-default"><%= link_to 'Add to Cart',"/cart/#{product.id}",data: {confirm: 'Add To Cart?'} %>-->
+
+</div>
+
+ </div>
+
+
+
+<!--endCSS-->
+
+
+
+
+
+<!--<td><a href="/products/<%=product.id%>/edit">Edit</a> || </td>
+<td><a href="/products/<%=product.id%>/delete">Delete</a> </td>
+<td><a href="/products/<%=product.id%>/sold">Sold One</a> </td> -->
+
+
+
+
+<!--
+<td><%= link_to 'Sold One',"/products/#{product.id}/sold",data: {confirm: 'Decrement a stock?'} %> ||</td>
+<td><%= link_to 'Add Stock',"/products/#{product.id}/add",data: {confirm: 'Add a stock?'} %> ||</td>
+<td><%= link_to 'Delete',"/products/#{product.id}/delete",data: {confirm: 'Are you Sure?'} %></td>
+
+-->
+
+
 
 
 <% end %>
 
-<%= yield %>
 
-</body>
-</html>
+<% end %>
+
+
+
+
+
+
+
+
+
+
+
