--- a/nworld/app/views/admins/user.html.erb
+++ b/nworld/app/views/admins/user.html.erb
@@ -5,10 +5,15 @@
 
 
  
-<table width="800">
+<table width="1000">
 <thead>
 <tr>
 <th>Email </th>
+<th>Type </th>
+<th>First Name </th>
+<th>Last Name </th>
+<th>Gender </th>
+<th>Birthday</th>
 <th>Sign In Count </th>
 <th>Last Session </th>
 <th>Last Sign in IP </th>
@@ -18,6 +23,11 @@
 <% @user.each do |user| %>
 <tr>
 <td><%=user.email%></td>
+<td><%=user.usertype%></td>
+<td><%=user.first%></td>
+<td><%=user.last%></td>
+<td><%=user.sex%></td>
+<td><%=user.birthday%></td>
 <td><%=user.sign_in_count%></td>
 <td><%=user.last_sign_in_at%></td>
 <td><%=user.last_sign_in_ip%></td>
