--- a/nworld/app/views/devise/registrations/new.html.erb
+++ b/nworld/app/views/devise/registrations/new.html.erb
@@ -1,45 +1,44 @@
 <center>
 
 <h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  
-   <div class="field">
+  <div class="field">
     <%= f.label :User_Type %><br />
     <%= f.text_field :usertype %><br /><br />
   </div>
-  
-    <div class="field">
+
+  <div class="field">
     <%= f.label :First_name %><br />
     <%= f.text_field :first %><br /><br />
   </div>
-  
-    <div class="field">
+
+  <div class="field">
     <%= f.label :Last_name %><br />
     <%= f.text_field :last %><br /><br />
   </div>
-  
-	<div class="field">
+
+  <div class="field">
+    <%= f.label :Username %><br />
+    <%= f.text_field :username %><br /><br />
+  </div>
+
+  <div class="field">
     <%= f.label :Gender %><br />
     <%= f.text_field :sex %><br /><br />
   </div>
-  
-    <div class="field">
+
+  <div class="field">
     <%= f.label :Birthday %><br />
     <%= f.text_field :birthday %><br /><br />
   </div>
-  
-       <div class="field">
+
+  <div class="field">
     <%= f.label :Address %><br />
     <%= f.text_field :address %><br /><br />
   </div>
-  
-    
-  
-  
-  
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %><br /><br />
@@ -48,7 +47,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %><br /><br />
   </div>
@@ -62,8 +61,7 @@
     <%= f.submit "Sign up" %> <br /><br />
   </div>
 <% end %>
+
 Already have an account? Click 
-
 <%= render "devise/shared/links" %>
-
 </center>
