--- a/nworld/app/views/devise/registrations/edit.html.erb
+++ b/nworld/app/views/devise/registrations/edit.html.erb
@@ -4,47 +4,41 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  
-  
-  
-   <div class="field">
+  <div class="field">
     <%= f.label :User_Type %><br />
     <%= f.text_field :usertype %><br /><br />
   </div>
-  
-    <div class="field">
+
+  <div class="field">
     <%= f.label :First_name %><br />
     <%= f.text_field :first %><br /><br />
   </div>
-  
-    <div class="field">
+
+  <div class="field">
     <%= f.label :Last_name %><br />
     <%= f.text_field :last %><br /><br />
   </div>
-  
-	<div class="field">
+
+  <div class="field">
+    <%= f.label :Username %><br />
+    <%= f.text_field :username %><br /><br />
+  </div>
+
+  <div class="field">
     <%= f.label :Gender %><br />
     <%= f.text_field :sex %><br /><br />
   </div>
-  
-    <div class="field">
+
+  <div class="field">
     <%= f.label :Birthday %><br />
     <%= f.text_field :birthday %><br /><br />
   </div>
-    
-      <div class="field">
+
+  <div class="field">
     <%= f.label :Address %><br />
     <%= f.text_field :address %><br /><br />
   </div>
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %><br /><br />
@@ -57,8 +51,8 @@
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %><br />
+
     <% if @minimum_password_length %>
-     
       <em><%= @minimum_password_length %> characters minimum</em> <br /><br />
     <% end %>
   </div>
@@ -80,9 +74,7 @@
 <br />
 
 <!--<h3>Cancel my account</h3>-->
-
 <p>Deactivate Account? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
-
 </center>
