--- a/nworldr2/app/views/devise/registrations/edit.html.erb
+++ b/nworldr2/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,7 @@
   
    <div class="field">
     <%= f.label :User_Type %><br />
-    <%= f.text_field :usertype %><br /><br />
+    <%= f.select(:usertype, User::TYPE_CLASS) %><br /><br />
   </div>
   
     <div class="field">
@@ -24,7 +24,7 @@
   
 	<div class="field">
     <%= f.label :Gender %><br />
-    <%= f.text_field :sex %><br /><br />
+    <%= f.select(:sex, User::SEX_CLASS) %><br /><br />
   </div>
   
     <div class="field">
