--- a/nworldr2/app/views/devise/registrations/new.html.erb
+++ b/nworldr2/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
   
    <div class="field">
     <%= f.label :User_Type %><br />
-    <%= f.text_field :usertype %><br /><br />
+    <%= f.select(:usertype, User::TYPE_CLASS) %><br /><br />
   </div>
   
     <div class="field">
@@ -23,7 +23,7 @@
   
 	<div class="field">
     <%= f.label :Gender %><br />
-    <%= f.text_field :sex %><br /><br />
+    <%= f.select(:sex, User::SEX_CLASS)  %><br /><br />
   </div>
   
     <div class="field">
