date field for birthday

--- a/nworldr2/app/views/devise/registrations/edit.html.erb
+++ b/nworldr2/app/views/devise/registrations/edit.html.erb
@@ -3,9 +3,6 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-
-  
-  
   
    <div class="field">
     <%= f.label :User_Type %><br />
@@ -29,21 +26,13 @@
   
     <div class="field">
     <%= f.label :Birthday %><br />
-    <%= f.text_field :birthday %><br /><br />
+    <%= f.date_field :birthday %><br /><br />
   </div>
     
       <div class="field">
     <%= f.label :Address %><br />
     <%= f.text_field :address %><br /><br />
   </div>
-  
-  
-  
-  
-  
-  
-  
-  
   
   <div class="field">
     <%= f.label :email %><br />
