--- a/nworldr2/app/views/devise/registrations/new.html.erb
+++ b/nworldr2/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,6 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  
    <div class="field">
     <%= f.label :User_Type %><br />
     <%= f.select(:usertype, User::TYPE_CLASS)%><br /><br />
@@ -28,17 +27,13 @@
   
     <div class="field">
     <%= f.label :Birthday %><br />
-    <%= f.text_field :birthday %><br /><br />
+    <%= f.date_field :birthday %><br /><br />
   </div>
   
        <div class="field">
     <%= f.label :Address %><br />
     <%= f.text_field :address %><br /><br />
   </div>
-  
-    
-  
-  
   
   <div class="field">
     <%= f.label :email %><br />
