dropdown product image source

--- a/nworldr2/app/views/admins/edit.html.erb
+++ b/nworldr2/app/views/admins/edit.html.erb
@@ -21,7 +21,7 @@
     <%= f.text_field :reserved %><br><br>
 
 	<%= f.label :Product_Image%><br>
-    <%= f.text_field :img %><br><br>
+    <%= f.select(:img, Product::IMG_SRC) %><br><br>
 <%= f.submit %><br>
 <% end %>
 
