use image source to render image in view

--- a/nworldr2/app/views/admins/show.html.erb
+++ b/nworldr2/app/views/admins/show.html.erb
@@ -1,41 +1,26 @@
 <strong>Name:</strong>
 <%=@product.name%><br>
 
-
 <strong>Suggested Retail Price:</strong>
 <%=@product.srp%><br>
-
 
 <strong>Retail Price:</strong>
 <%=@product.retail_price%><br>
 
-
 <strong>Distributor Price:</strong>
 <%=@product.distributor_price%><br>
-
 
 <strong>Number of Stock:</strong>
 <%=@product.num_stock%><br>
 
-
-
 <strong>Reserved:</strong>
 <%=@product.reserved%><br>
 
+<strong>Product Image Souce:</strong>
+<%=@product.img%>
+<br>
 <strong>Product Image:</strong>
-<%=@product.img%><br>
-
-
-
-
-
-
-
-
-
+<img src = "<%=@product.img%>">
+<br>
 
 <a href="/admins"> Back to Main </a><br>
-
-
-
-
