--- a/nworldr2/app/views/admins/show.html.erb
+++ b/nworldr2/app/views/admins/show.html.erb
@@ -20,7 +20,7 @@
 <%=@product.img%>
 <br>
 <strong>Product Image:</strong>
-<img src = "<%=@product.img%>">
+<img src = "/assets/<%=@product.img%>">
 <br>
 
 <a href="/admins"> Back to Main </a><br>
